--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,700;1,400&family=Manrope:wght@400;600&family=Spartan:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,700;1,400&family=Manrope:wght@400;600&family=Spartan:wght@700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,10 +6,12 @@
   padding: 0;
 }
 
-
-
 html {
   font-size: 62.5%;
+
+  @media (max-width: 750px) {
+    font-size: 50%;
+  }
 }
 
 // utils
@@ -18,6 +20,6 @@ html {
   margin: 0 auto;
 
   @media (max-width: 1000px) {
-    width: 95%;
+    width: 90%;
   }
 }
