--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -5,7 +5,7 @@
   height: 80vh;
 
   @media (max-width: 1000px) {
-    height: 100vh;
+    height: 84rem;
   }
 
   &__content {
@@ -28,8 +28,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-top: 8.5rem;
-        width: 60%;
+        margin-top: 6.5rem;
+        width: 55%;
         text-align: center;
       }
 
@@ -44,9 +44,19 @@
         font-size: 1.6rem;
         font-family: "Jost", sans-serif;
         margin: 3rem 0;
+
+        @media (max-width: 1000px) {
+          margin: 1rem 0;
+        }
       }
 
       & button {
+        @media (max-width: 1000px) {
+          //   display: inline-block;
+          width: 40%;
+          margin: 0 auto;
+          margin-top: 1rem;
+        }
       }
     }
   }
@@ -61,11 +71,13 @@
 .phone {
   position: absolute;
   top: -6rem;
-  right: -8rem;
+  right: -6rem;
 
   @media (max-width: 1000px) {
-    position: relative;
+    position: absolute;
     margin: 0 auto;
-    // top: 15rem;
+    top: 27rem;
+    width: 100%;
+    margin: 0 auto;
   }
 }
