--- a/src/components/GetInTouch/GetInTouch.scss
+++ b/src/components/GetInTouch/GetInTouch.scss
@@ -5,6 +5,9 @@
   border-radius: 1rem;
   padding: 8rem 0;
   margin-top: 14rem;
+  position: relative;
+  bottom: -6rem;
+  left: 0;
 
   &__content {
     width: 75%;
