--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -37,6 +37,8 @@
       font-family: "Jost", sans-serif;
       font-weight: 400;
       color: #333136;
+      width: 85%;
+      margin: 0 auto;
     }
   }
 }
