--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,12 +4,23 @@
   justify-content: center;
   padding: 8rem 0;
 
+  @media (max-width: 750px) {
+    flex-direction: column;
+  }
+
   &__content {
     margin-top: 5rem;
     &-nav {
       display: flex;
       align-items: center;
       padding-bottom: 4rem;
+
+      @media (max-width: 750px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
       &-logo img {
         height: 2.4rem;
       }
@@ -19,11 +30,22 @@
         list-style: none;
         margin-left: auto;
 
+        @media (max-width: 750px) {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin: 0;
+        }
+
         &-link {
           text-decoration: none;
 
           &:not(:last-child) {
             margin-right: 3.8rem;
+
+            @media (max-width: 750px) {
+              margin: 0;
+            }
           }
         }
 
@@ -33,6 +55,10 @@
           color: #fff;
           text-transform: uppercase;
           letter-spacing: 0.2rem;
+
+          @media (max-width: 750px) {
+            margin-top: 1.6rem;
+          }
         }
       }
     }
@@ -40,6 +66,13 @@
     &-contact-info {
       border-top: 1px solid #9797972a;
       display: flex;
+
+      @media (max-width: 750px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
 
       color: rgba(255, 255, 255, 0.342);
       font-family: "Jost", sans-serif;
@@ -57,6 +90,11 @@
         font-size: 1.6rem;
         margin-left: 25%;
 
+        @media (max-width: 750px) {
+          margin: 0;
+          margin-top: 3.5rem;
+        }
+
         & p:not(:first-child) {
           margin-top: 0.3rem;
         }
@@ -66,8 +104,23 @@
         margin-left: auto;
         align-self: flex-end;
 
+        @media (max-width: 750px) {
+          margin: 0;
+          align-self: center;
+          margin-top: 3.4rem;
+        }
+
         & img:not(:last-child) {
           margin-right: 1.4rem;
+
+          @media (max-width: 750px) {
+            margin-right: 0;
+          }
+        }
+        & img:not(:first-child) {
+          @media (max-width: 750px) {
+            margin-left: 1.4rem;
+          }
         }
       }
     }
