--- a/src/components/GetInTouch/GetInTouch.scss
+++ b/src/components/GetInTouch/GetInTouch.scss
@@ -15,9 +15,23 @@
     display: flex;
     align-items: center;
     color: #fff;
+
+    @media (max-width: 1000px) {
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+    }
     &-text {
       width: 45%;
       margin-right: auto;
+      @media (max-width: 1000px) {
+        margin: 0;
+        width: 60%;
+      }
+      @media (max-width: 750px) {
+        margin: 0;
+        width: 80%;
+      }
       & h2 {
         font-size: 4rem;
         font-family: "Jost", sans-serif;
@@ -28,11 +42,19 @@
         font-size: 1.6rem;
         font-family: "Jost", sans-serif;
         font-weight: 400;
+
+        @media (max-width: 1000px) {
+          margin-top: 1rem;
+        }
       }
     }
     & button {
       display: inline-block;
       height: 5.6rem;
+
+      @media (max-width: 1000px) {
+        margin-top: 2rem;
+      }
     }
   }
 }
